# NanaoChanBot

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.build  Dockerfile.train  Makefile  README.md  captain-build.sh  docker-build.sh  docker-local-deploy.sh  docker-train.sh  nanao-build.sh  nanao-train.sh
Data/: preferencesIT.txt
MalParser/: clog.py  dbManager.py  malHelper.py  parser.py
language/: it.lan
resources/: dataset.json  telegram.json
src/: CMakeLists.txt  DataMap.cpp  DataMap.h  DatabaseManager.cpp  DatabaseManager.h  Defines.h  EchoApi.hpp  ExecutionTimer.cpp  ExecutionTimer.h  Helper.cpp  Helper.h  Log.cpp  Log.h  Server.cpp  Server.hpp  Source.cpp
src/Bot/: AnimeResultParse.cpp  AnimeResultParse.h  Connection.cpp  Connection.h  RateLimiter.cpp  RateLimiter.h  Stats.cpp  Stats.h  TelegramBot.cpp  TelegramBot.h  Update.cpp  Update.h
src/common/: GlobalStaticConfig.hpp  ReplyContainer.cpp  ReplyContainer.hpp  Utility.h
src/global/: GlobalStaticConfig.hpp  Utility.h
src/http/: ApiInterface.hpp  Reply.cpp  Reply.hpp  Request.cpp  Request.hpp
src/telegram/: BotApi.cpp  BotApi.hpp  TelegramBotApi.cpp  TelegramBotApi.hpp  Update.cpp  Update.hpp
src/traier/: MLTrainer.cpp  MLTrainer.hpp
tests/: ApiCalls.py  dataoverflow.py  fakeWebhook.py  keepsockopen.py  sockTest.py
